# moirai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SELF_IMPROVEMENT.md  SPEC.md  comments.md  pyproject.toml
docs/architecture/initial-build/: SPEC.md  comments.md
moirai/: __init__.py  __main__.py  atropos.py  cli.py  lachesis.py  loop_executor.py  process_manager.py  protocols.py  templates.py  themis.py  time_provider.py  types.py
moirai/defaults/: agents.yaml  dev-workflow.yaml
moirai/persistence/: __init__.py  memory_backend.py
tests/: test_atropos.py  test_cli.py  test_integration_full_pipeline.py  test_integration_lachesis_atropos.py  test_lachesis.py  test_loop_executor.py  test_memory_backend.py  test_process_manager.py  test_skeleton.py  test_templates.py  test_themis.py
tests/fakes/: __init__.py  atropos.py  human_notifier.py  process_manager.py  time_provider.py
