[project]
name = "moirai"
version = "0.1.0"
description = "Deterministic agent task graph scheduler"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
repository = "https://github.com/NamalD/moirai"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["moirai"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
